--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,15 +31,11 @@ jobs:
       run: npm ci
     - name: Build Core
       run: npm run build -- --ci
-    - name: Create Build Archive
-      uses: edgarrc/action-7z@v1
-      with:
-        args: 7z a -tzip core/CoreBuild.zip core/dist core/components core/css core/hydrate core/loader
-    - name: Upload Build Output
-      uses: actions/upload-artifact@v2
+    - uses: ionic/upload-archive@v1
       with:
         name: ionic-core
-        path: core/CoreBuild.zip
+        output: core/CoreBuild.zip
+        paths: core/dist core/components core/css core/hydrate core/loader
 
   build-vue:
     needs: [build-core]
@@ -90,4 +86,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: ionic-vue
-        path: packages/VueBuild.zip
+        path: packages/vue/VueBuild.zip
