--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,11 +31,15 @@ jobs:
       run: npm ci
     - name: Build Core
       run: npm run build -- --ci
-    - uses: ./.github/workflows/upload-archive
+    - name: Create Build Archive
+      uses: edgarrc/action-7z@v1
+      with:
+        args: 7z a -tzip core/CoreBuild.zip core/dist core/components core/css core/hydrate core/loader
+    - name: Upload Build Output
+      uses: actions/upload-artifact@v2
       with:
         name: ionic-core
-        output: core/CoreBuild.zip
-        paths: core/dist core/components core/css core/hydrate core/loader
+        path: core/VueBuild.zip
 
   build-vue:
     needs: [build-core]
