--- a/core/package.json
+++ b/core/package.json
@@ -31,7 +31,7 @@
     "loader/"
   ],
   "dependencies": {
-    "@stencil/core": "2.6.0-0",
+    "@stencil/core": "^2.6.0",
     "ionicons": "^5.5.1",
     "tslib": "^2.1.0"
   },
