add pinchZoom prop on ion-content

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -39,7 +39,7 @@
     "css/"
   ],
   "dependencies": {
-    "@ionic/core": "6.0.0-beta.0",
+    "@ionic/core": "file:../../core",
     "ionicons": "^5.1.2",
     "tslib": "*"
   },
