Squashed commit of the following:
commit 75beb985c9f6f4c609072e94317d2abb88b385de
Author: João Vitor <jvmdo2008@gmail.com>
Date:   Thu Sep 9 17:35:41 2021 -0300

    Alteração med alternativas marcação fora de hora.

commit 306fe427a0073e5cd9c5eb6451b6640a8fa746b4
Author: alexbleggi <alexbleggi@gmail.com>
Date:   Wed Sep 8 10:16:30 2021 -0300

    ajuste med alternativas

commit 71a143c19fe372ca304422326769ee78e520e34a
Author: alexbleggi <alexbleggi@gmail.com>
Date:   Mon Sep 6 14:28:43 2021 -0300

    ajustes med-alternativas

commit a9cc9b21f34e3319516758fa6c315d93aca68197
Author: alexbleggi <alexbleggi@gmail.com>
Date:   Mon Sep 6 11:13:09 2021 -0300

    Ajuste med-alternativas

commit 12a97db4215f7892eff269b6017b081976f3ed5c
Author: alexbleggi <alexbleggi@gmail.com>
Date:   Fri Sep 3 13:32:37 2021 -0300

    commit

commit 0ef4e1c5e8f9404fcab052cb611402439c52a7c2
Author: alexbleggi <alexbleggi@gmail.com>
Date:   Wed Sep 1 14:36:01 2021 -0300

    ajuste radial

commit 5dc7b57195153989af209571b3a50d1fc563dff8
Author: Marcelo Brandao <marcelo.barbosa@medgrupo.com.br>
Date:   Tue Aug 31 11:26:38 2021 -0300

    riscar

commit 3d12d201a3e3f65284cc7cc6a6a83b930ada3676
Author: Marcelo Brandao <marcelo.barbosa@medgrupo.com.br>
Date:   Fri Aug 27 16:21:02 2021 -0300

    ajuste item list

commit c7955a30983d832bbfeb2ba90b292e201a828876
Author: alexbleggi <alexbleggi@gmail.com>
Date:   Fri Aug 27 13:09:05 2021 -0300

    commit

commit a5fd1ca10256b510b8cc9024314e5da575ef65f2
Author: Leonardo Setubal <setubal43@gmail.com>
Date:   Thu Aug 26 15:58:08 2021 -0300

    fix: Correção reverse array

commit 1a533174f4c0d0f03a7fb9af061cac3d39ec9d95
Author: Marcelo Brandao <marcelo.barbosa@medgrupo.com.br>
Date:   Wed Aug 25 09:14:07 2021 -0300

    Remoçao riscar

commit b84c7b625cded73fe572aaf268cabe341480af00
Author: Leonardo Setubal <setubal43@gmail.com>
Date:   Tue Aug 24 16:29:04 2021 -0300

    fix: se for 0 altera para 50% a barra de voto

commit 367cc343f063ae784a2780dd

--- a/.github/workflows/repo-sync.yml
+++ b/.github/workflows/repo-sync.yml
@@ -15,6 +15,6 @@ jobs:
         uses: repo-sync/github-sync@v2.3.0
         with:
           source_repo: "https://github.com/ionic-team/ionic-framework"
-          source_branch: "master"
+          source_branch: "main"
           destination_branch: "sync"
           github_token: ${{ secrets.GITHUB_TOKEN }}
