fix upload path

--- a/.github/workflows/upload-archive/action.yml
+++ b/.github/workflows/upload-archive/action.yml
@@ -16,4 +16,4 @@ runs:
     - uses: actions/upload-artifact@v2
       with:
         name: ${{ inputs.name }}
-        path: ${{ inputs.paths }}
+        path: ${{ inputs.output }}
