--- a/.github/workflows/download-archive/action.yml
+++ b/.github/workflows/download-archive/action.yml
@@ -12,6 +12,5 @@ runs:
       with:
         name: ${{ inputs.name }}
         path: ${{ inputs.path }}
-    - uses: edgarrc/action-7z@v1
-      with:
-        args: 7z x ${{ inputs.path }} -aoa
+    - name: Extract Archive
+      run: tar -xvf ${{ inputs.path }}
