--- a/.github/workflows/upload-archive/action.yml
+++ b/.github/workflows/upload-archive/action.yml
@@ -10,7 +10,7 @@ inputs:
 runs:
   using: 'composite'
   steps:
-    run: tar -cvf ${{ inputs.output }} ${{ inputs.paths }}
+    - run: tar -cvf ${{ inputs.output }} ${{ inputs.paths }}
     - uses: actions/upload-artifact@v2
       with:
         name: ${{ inputs.name }}
