--- a/.github/workflows/download-archive/action.yml
+++ b/.github/workflows/download-archive/action.yml
@@ -13,3 +13,4 @@ runs:
         name: ${{ inputs.name }}
         path: ${{ inputs.path }}
     - run: tar -xvf ${{ inputs.path }}
+      shell: bash
