--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,10 @@ on:
 jobs:
   build-core:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+        working-directory: ./core
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/workflows/packages/core
