--- a/.github/workflows/packages/angular/action.yml
+++ b/.github/workflows/packages/angular/action.yml
@@ -7,13 +7,24 @@ runs:
       with:
         node-version: 15.x
 
-    - name: Cache Node Modules
+    - name: Cache Core Node Modules
       uses: actions/cache@v2
       env:
         cache-name: core-node-modules
       with:
         path: ./core/node_modules
         key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('./core/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-build-${{ env.cache-name }}-
+          ${{ runner.os }}-build-
+          ${{ runner.os }}-
+    - name: Cache Angular Node Modules
+      uses: actions/cache@v2
+      env:
+        cache-name: angular-node-modules
+      with:
+        path: ./packages/angular/node_modules
+        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('./packages/angular/package-lock.json') }}
         restore-keys: |
           ${{ runner.os }}-build-${{ env.cache-name }}-
           ${{ runner.os }}-build-
