--- a/.github/workflows/upload-archive/action.yml
+++ b/.github/workflows/upload-archive/action.yml
@@ -10,9 +10,9 @@ inputs:
 runs:
   using: 'composite'
   steps:
-    - uses: edgarrc/action-7z@v1
-      with:
-        args: 7z a -tzip ${{ inputs.output }} ${{ inputs.paths }}
+    - name: Create Archive
+      run: zip -r ${{ inputs.output }} ${{ inputs.paths }}
+      shell: bash
     - uses: actions/upload-artifact@v2
       with:
         name: ${{ inputs.name }}
