--- a/.github/workflows/packages/vue/action.yml
+++ b/.github/workflows/packages/vue/action.yml
@@ -32,7 +32,7 @@ runs:
     - uses: ./.github/workflows/download-archive
       with:
         name: ionic-core
-        path: core/CoreBuild.zip
+        path: ./core/CoreBuild.zip
     - name: Install Vue Dependencies
       run: npm install
       shell: bash
@@ -52,5 +52,5 @@ runs:
     - uses: ./.github/workflows/upload-archive
       with:
         name: ionic-vue
-        output: packages/vue/VueBuild.zip
+        output: ./packages/vue/VueBuild.zip
         paths: packages/vue/dist packages/vue/css
