--- a/.github/workflows/download-archive/action.yml
+++ b/.github/workflows/download-archive/action.yml
@@ -12,6 +12,9 @@ runs:
       with:
         name: ${{ inputs.name }}
         path: ${{ inputs.path }}
+    - name: run ls
+      run: ls
+      shell: bash
     - name: Exract Archive
       run: unzip -o ${{ inputs.path }}
       shell: bash
