--- a/.github/workflows/download-archive/action.yml
+++ b/.github/workflows/download-archive/action.yml
@@ -3,6 +3,8 @@ description: 'Downloads and decompresses an archive from a previous job'
 inputs:
   path:
     description: 'Input archive name'
+  input:
+    description: 'Input file name'
   name:
     description: 'Archive name'
 runs:
@@ -16,5 +18,5 @@ runs:
       run: ls
       shell: bash
     - name: Exract Archive
-      run: unzip -o ${{ inputs.path }}
+      run: unzip -o ${{ inputs.input }}
       shell: bash
