--- a/.github/workflows/packages/angular/action.yml
+++ b/.github/workflows/packages/angular/action.yml
@@ -32,7 +32,8 @@ runs:
     - uses: ./.github/workflows/download-archive
       with:
         name: ionic-core
-        path: core/CoreBuild.zip
+        path: ./core
+        input: ./core/CoreBuild.zip
     - name: Install Angular Dependencies
       run: npm install
       shell: bash
