--- a/.github/workflows/packages/vue/action.yml
+++ b/.github/workflows/packages/vue/action.yml
@@ -33,7 +33,7 @@ runs:
       with:
         name: ionic-core
         path: ./core
-        input: ./core/CoreBuild.zip
+        filename: CoreBuild.zip
     - name: Install Vue Dependencies
       run: npm install
       shell: bash
