legacy peer deps!

--- a/.github/workflows/packages/react/action.yml
+++ b/.github/workflows/packages/react/action.yml
@@ -35,7 +35,7 @@ runs:
         path: ./core
         filename: CoreBuild.zip
     - name: Install React Dependencies
-      run: npm install
+      run: npm install --legacy-peer-deps
       shell: bash
       working-directory: ./packages/react
     - name: Link @ionic/core
