--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,27 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ./.github/workflows/packages/core
 
+  test-core-clean-build:
+    needs: [build-core]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ./.github/workflows/actions/test-core-clean-built
+
+  test-core-lint:
+    needs: [build-core]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ./.github/workflows/actions/test-core-lint
+
+  test-core-spec:
+    needs: [build-core]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ./.github/workflows/actions/test-core-spec
+
   build-vue:
     needs: [build-core]
     runs-on: ubuntu-latest
