--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,6 +46,20 @@ jobs:
     - uses: actions/checkout@v2
     - uses: ./.github/workflows/packages/angular
 
+  build-angular-server:
+    needs: [build-angular]
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: ./.github/workflows/packages/angular-server
+
+  test-angular-lint:
+    needs: [build-angular]
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: ./.github/workflows/actions/test-angular-lint
+
   build-react:
     needs: [build-core]
     runs-on: ubuntu-latest
