--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,6 +60,13 @@ jobs:
     - uses: actions/checkout@v2
     - uses: ./.github/workflows/actions/test-angular-lint
 
+  test-angular-e2e:
+    needs: [build-angular, build-angular-server]
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: ./.github/workflows/actions/test-angular-e2e
+
   build-react:
     needs: [build-core]
     runs-on: ubuntu-latest
