--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,13 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ./.github/workflows/actions/test-core-spec
 
+  test-core-e2e:
+    needs: [build-core]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ./.github/workflows/actions/test-core-e2e
+
   build-vue:
     needs: [build-core]
     runs-on: ubuntu-latest
