--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,3 +80,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: ./.github/workflows/packages/react
+
+  build-react-router:
+    needs: [build-react]
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: ./.github/workflows/packages/react-router
