--- a/.github/workflows/packages/react/action.yml
+++ b/.github/workflows/packages/react/action.yml
@@ -7,6 +7,18 @@ runs:
       with:
         node-version: 15.x
 
+    - name: Cache Core Node Modules
+      uses: actions/cache@v2
+      env:
+        cache-name: core-node-modules
+      with:
+        path: ./core/node_modules
+        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('./core/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-build-${{ env.cache-name }}-
+          ${{ runner.os }}-build-
+          ${{ runner.os }}-
+
     - uses: ./.github/workflows/download-archive
       with:
         name: ionic-core
