--- a/.github/workflows/packages/react-router/action.yml
+++ b/.github/workflows/packages/react-router/action.yml
@@ -7,6 +7,17 @@ runs:
       with:
         node-version: 15.x
 
+    - name: Cache Core Node Modules
+      uses: actions/cache@v2
+      env:
+        cache-name: core-node-modules
+      with:
+        path: ./core/node_modules
+        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('./core/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-build-${{ env.cache-name }}-
+          ${{ runner.os }}-build-
+          ${{ runner.os }}-
     - name: Install Dependencies
       run: npm install --legacy-peer-deps
       shell: bash
