--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,6 +46,13 @@ jobs:
     - uses: actions/checkout@v2
     - uses: ./.github/workflows/packages/vue
 
+  build-vue-router:
+    needs: [build-vue]
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: ./.github/workflows/packages/vue-router
+
   build-angular:
     needs: [build-core]
     runs-on: ubuntu-latest
