--- a/.github/workflows/packages/vue-router/action.yml
+++ b/.github/workflows/packages/vue-router/action.yml
@@ -39,6 +39,10 @@ runs:
       run: npm run build
       shell: bash
       working-directory: ./packages/vue-router
+    - name: Test Spec
+      run: npm run test.spec
+      shell: bash
+      working-directory: ./packages/vue-router
     - uses: ./.github/workflows/upload-archive
       with:
         name: ionic-vue-router
