--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,6 +53,13 @@ jobs:
     - uses: actions/checkout@v2
     - uses: ./.github/workflows/packages/vue-router
 
+  test-vue-e2e:
+    needs: [build-vue, build-vue-router]
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: ./.github/workflows/actions/test-vue-e2e
+
   build-angular:
     needs: [build-core]
     runs-on: ubuntu-latest
